// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-return-void > typescript > options > allowNull > reports null returning functions when disallowed 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 26,
      "endColumn": 32,
      "endLine": 1,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "TSTypeAnnotation",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number): null {
  return null;
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 26,
          "endColumn": 32,
          "endLine": 1,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "TSTypeAnnotation",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number): null {
  return null;
}",
    },
  ],
}
`;

exports[`no-return-void > typescript > options > allowNull > reports null returning functions with inferred return type when disallowed 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 3,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number) {
  return null;
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 2,
          "endLine": 3,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "FunctionDeclaration",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number) {
  return null;
}",
    },
  ],
}
`;

exports[`no-return-void > typescript > options > allowUndefined > reports undefined returning functions when disallowed 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 26,
      "endColumn": 37,
      "endLine": 1,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "TSTypeAnnotation",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number): undefined {
  return undefined;
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 26,
          "endColumn": 37,
          "endLine": 1,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "TSTypeAnnotation",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number): undefined {
  return undefined;
}",
    },
  ],
}
`;

exports[`no-return-void > typescript > options > allowUndefined > reports undefined returning functions with inferred return type when disallowed 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 3,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number) {
  return undefined;
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 2,
          "endLine": 3,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "FunctionDeclaration",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number) {
  return undefined;
}",
    },
  ],
}
`;

exports[`no-return-void > typescript > reports void returning functions 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 26,
      "endColumn": 32,
      "endLine": 1,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "TSTypeAnnotation",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number): void {
  console.log(bar);
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 26,
          "endColumn": 32,
          "endLine": 1,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "TSTypeAnnotation",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number): void {
  console.log(bar);
}",
    },
  ],
}
`;

exports[`no-return-void > typescript > reports void returning functions with inferred return type 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 3,
      "line": 1,
      "message": "Function must return a value.",
      "messageId": "generic",
      "nodeType": "FunctionDeclaration",
      "ruleId": "no-return-void",
      "severity": 2,
    },
  ],
  "output": "function foo(bar: number) {
  console.log(bar);
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 2,
          "endLine": 3,
          "line": 1,
          "message": "Function must return a value.",
          "messageId": "generic",
          "nodeType": "FunctionDeclaration",
          "ruleId": "rule-to-test/no-return-void",
          "severity": 2,
        },
      ],
      "output": "function foo(bar: number) {
  console.log(bar);
}",
    },
  ],
}
`;
